# MonitorSystem

./: .gitmodules  README.md
backend/: .clang-format  .config  .config.old  .gitignore  CMakeLists.txt  README.md  build.sh  config.sh  handler.h  main.cpp
backend/device/: CMakeLists.txt
backend/device/fal/: CMakeLists.txt  README.md
backend/device/fal/inc/: fal_cfg.h  fal_def.h
backend/device/fal/port/: fal_flash_sfud_port.c
backend/device/flashdb/: CMakeLists.txt  README.md
backend/device/flashdb/inc/: fdb_cfg.h
backend/device/led/: CMakeLists.txt  led.cpp  led.h  led.hpp
backend/device/machine/: CMakeLists.txt  machine.cpp  machine.h
backend/device/sfud/: CMakeLists.txt  README.md
backend/device/sfud/inc/: sfud_cfg.h
backend/device/sfud/port/: sfud_port.c
backend/device/sfud/src/: sfud_sfdp.c
backend/easyloggingpp/: CMakeLists.txt  README.md  easylogging++.cc  easylogginghelper.h  easylogginghelper.hpp
backend/handler/: CMakeLists.txt  handler.cpp  handler.h  handler.hpp
backend/http/: CMakeLists.txt  handler.cpp  handler.h  router.cpp  router.h
backend/info/: CMakeLists.txt  cpu.c  cpu.h
backend/kconfig/: kconfig  kconfig.py
backend/led/: CMakeLists.txt  led.cpp  led.hpp
backend/machine/: CMakeLists.txt  machine.cpp  machine.h  machine.hpp
backend/main/: CMakeLists.txt  main.cpp
fontend/: README.md  package-lock.json  package.json  vite.config.js
fontend/src/: App.vue
fontend/src/js/: axios.js  utils.js
frontend/src/: App.vue
frontend/src/js/: axios.js
test/: backend_test.sh  main  main.cpp  makefile
